// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description renders correctly 1`] = `
<DocumentFragment>
  .cache-1t3h7h5-BareDescription {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  line-height: 24px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-16r8ct-Term {
  font-weight: 500;
  color: #151a2d;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.cache-16r8ct-Term:after {
  content: ':';
}

.cache-1drike1-Desc {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
  margin: 0;
}

<dl
    class="cache-1t3h7h5-BareDescription eu9mc5y0"
  >
    <dt
      class="cache-16r8ct-Term eu9mc5y2"
    >
      Name
    </dt>
    <dd
      class="cache-1drike1-Desc eu9mc5y1"
    >
      Big instance
    </dd>
    <dt
      class="cache-16r8ct-Term eu9mc5y2"
    >
      Size
    </dt>
    <dd
      class="cache-1drike1-Desc eu9mc5y1"
    >
      125 GB
    </dd>
  </dl>
</DocumentFragment>
`;

exports[`Description renders correctly inline 1`] = `
<DocumentFragment>
  .cache-qc6057-BareDescription {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  line-height: 24px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.cache-16r8ct-Term {
  font-weight: 500;
  color: #151a2d;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.cache-16r8ct-Term:after {
  content: ':';
}

.cache-1drike1-Desc {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
  margin: 0;
}

<dl
    class="cache-qc6057-BareDescription eu9mc5y0"
  >
    <dt
      class="cache-16r8ct-Term eu9mc5y2"
    >
      Name
    </dt>
    <dd
      class="cache-1drike1-Desc eu9mc5y1"
    >
      Big instance
    </dd>
    <dt
      class="cache-16r8ct-Term eu9mc5y2"
    >
      Size
    </dt>
    <dd
      class="cache-1drike1-Desc eu9mc5y1"
    >
      125 GB
    </dd>
  </dl>
</DocumentFragment>
`;

exports[`Description renders correctly seletable 1`] = `
<DocumentFragment>
  .cache-tlt704-BareDescription-BareDescription {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  line-height: 24px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.cache-tlt704-BareDescription-BareDescription .eu9mc5y1 {
  -webkit-user-select: all;
  -moz-user-select: all;
  -ms-user-select: all;
  user-select: all;
}

.cache-tlt704-BareDescription-BareDescription .eu9mc5y1::selection {
  color: #ffffff;
  background: #4f0599;
}

.cache-16r8ct-Term {
  font-weight: 500;
  color: #151a2d;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.cache-16r8ct-Term:after {
  content: ':';
}

.cache-1drike1-Desc {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
  margin: 0;
}

<dl
    class="cache-tlt704-BareDescription-BareDescription eu9mc5y0"
  >
    <dt
      class="cache-16r8ct-Term eu9mc5y2"
    >
      Name
    </dt>
    <dd
      class="cache-1drike1-Desc eu9mc5y1"
    >
      Big instance
    </dd>
    <dt
      class="cache-16r8ct-Term eu9mc5y2"
    >
      Size
    </dt>
    <dd
      class="cache-1drike1-Desc eu9mc5y1"
    >
      125 GB
    </dd>
  </dl>
</DocumentFragment>
`;
